--- a/src/app/components/main-content/main-content.component.scss
+++ b/src/app/components/main-content/main-content.component.scss
@@ -122,3 +122,28 @@
     }
   }
 }
+
+::ng-deep .sort-menu {
+  .selected{
+    background-color: #e3f2fd;
+  }
+  h3.sort-title {
+    margin: 0;
+    padding: 8px 16px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #444;
+    border-bottom: 1px solid #e0e0e0;
+  }
+  .menu-label {
+    font-size: 14px;
+    display: inline-block;
+  }
+
+  .check-icon {
+    font-size: 18px;
+    line-height: 1;
+    vertical-align: middle;
+    margin-top: -1px;
+  }
+}
