--- a/src/app/components/main-content/main-content.component.html
+++ b/src/app/components/main-content/main-content.component.html
@@ -143,10 +143,19 @@
 
       <div class="search-wrapper">
         <mat-icon class="search-icon">search</mat-icon>
-        <input type="text" placeholder="Search by name, ID or phone" [(ngModel)]="searchText" (input)="filterHelpers()"/>
+        <input
+          type="text"
+          placeholder="Search by name, ID or phone"
+          [(ngModel)]="searchText"
+          (input)="filterHelpers()"
+        />
+      </div>
+      
+      <div class="users" *ngIf="isFilterApplied(); else elseBlock">
+        {{ helpers.length }} of {{ allHelpers.length }} helpers
       </div>
 
-      <div class="users">{{helpers.length}} of {{allHelpers.length}}  helpers</div>
+      <ng-template #elseBlock> {{allHelpers.length}} helpers </ng-template>
     </div>
 
     <div class="right">
