feat: add message for no helpers found in the profiles section

--- a/src/app/components/main-content/helpers/helpers.component.html
+++ b/src/app/components/main-content/helpers/helpers.component.html
@@ -1,6 +1,9 @@
 <div class="helpers-container">
   <!-- Sidebar -->
   <div class="profiles">
+    <div *ngIf="helpers?.length === 0" class="no-helpers-message">
+      No helpers found for the selected filters or they are empty
+    </div>
     <div
       *ngFor="let helper of helpers"
       class="profile-card"
