feat: add remove photo functionality and update button styles in helper details component

--- a/src/app/components/add-helper/sections/helper-details/helper-details.component.html
+++ b/src/app/components/add-helper/sections/helper-details/helper-details.component.html
@@ -24,6 +24,16 @@
     />
   </div>
 
+  <button
+    mat-stroked-button
+    color="warn"
+    type="button"
+    style="margin-top: 8px; margin-bottom: 8px"
+    (click)="removePhoto()"
+  >
+    Remove Photo
+  </button>
+
   <p>Upload Photo (.png, .jpeg) size 5mb</p>
 
   <!-- Type of Service -->
@@ -103,7 +113,11 @@
       <mat-select-trigger>
         {{ getSelectedLanguagesDisplay() }}
       </mat-select-trigger>
-      <mat-checkbox color="primary" (click) = "toggleSelectAll(); $event.stopPropagation()" [checked]="isAllSelected()">
+      <mat-checkbox
+        color="primary"
+        (click)="toggleSelectAll(); $event.stopPropagation()"
+        [checked]="isAllSelected()"
+      >
         Select All
       </mat-checkbox>
       <mat-option *ngFor="let lang of languages" [value]="lang">
@@ -204,6 +218,8 @@
   <div class="uploaded-indicator" *ngIf="form.get('kycDocument')?.value">
     <mat-icon>picture_as_pdf</mat-icon>
     <span>{{ form.get("kycDocument")?.value?.fileName }} Uploaded</span>
+  </div>
+  <div class="button-group">
     <button
       type="button"
       mat-stroked-button
@@ -212,6 +228,7 @@
     >
       Change
     </button>
+
     <button
       type="button"
       mat-stroked-button
@@ -221,6 +238,7 @@
       Remove
     </button>
   </div>
+
   <mat-error
     *ngIf="
       form.get('kycDocument')?.hasError('required') &&
