--- a/src/app/components/add-helper/sections/helper-details/helper-details.component.scss
+++ b/src/app/components/add-helper/sections/helper-details/helper-details.component.scss
@@ -154,25 +154,6 @@ label {
   }
 }
 
-// .kyc-upload {
-//   width: 120px;
-//   height: 120px;
-//   border: 2px dotted #3f51b5;
-//   background-color: #e8eaf6;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   margin-top: 8px;
-
-//   button {
-//     font-size: 28px;
-//     font-weight: bold;
-//     background: none;
-//     border: none;
-//     color: #3f51b5;
-//     cursor: pointer;
-//   }
-// }
 .kyc-upload {
   width: 120px;
   height: 120px;
@@ -197,6 +178,8 @@ label {
   align-items: center;
   color: red;
   border-radius: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   font-size: 14px;
   mat-icon {
     font-size: 40px;
@@ -211,4 +194,14 @@ mat-error {
   margin-top: 4px;
   display: block;
   font-weight: 500;
+}
+
+.button-group {
+  display: flex;
+  gap: 12px; /* space between buttons */
+  margin-top: 8px;
+
+  button {
+    cursor: pointer;
+  }
 }
