--- a/src/app/components/add-helper/sections/helper-details/helper-details.component.scss
+++ b/src/app/components/add-helper/sections/helper-details/helper-details.component.scss
@@ -16,7 +16,7 @@ p {
 
 .full-width {
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 
 mat-form-field.full-width {
@@ -40,10 +40,11 @@ input.full-width,
 .phone-wrapper .phone-input,
 input[type="email"] {
   width: 100%;
-  height: 48px;
+  height: 42px;
   padding: 10px;
   font-size: 14px;
-  border: 1px solid #ccc;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.38);
   box-sizing: border-box;
 }
 
@@ -102,10 +103,10 @@ input[type="email"] {
 .phone-wrapper {
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 
   .country-code {
-    height: 48px;
+    height: 42px;
     padding: 0 12px;
     border: 1px solid #ccc;
     border-right: none;
@@ -117,7 +118,7 @@ input[type="email"] {
 
   .phone-input {
     flex: 1;
-    height: 48px;
+    height: 42px;
     padding: 0 10px;
     border: 1px solid #ccc;
     font-size: 14px;
@@ -192,7 +193,7 @@ label {
 mat-error {
   color: red !important;
   font-size: 12px;
-  margin-top: 4px;
+  margin-top: 1px;
   display: block;
   font-weight: 500;
 }
