--- a/src/app/components/main-content/selected-helper/selected-helper.component.scss
+++ b/src/app/components/main-content/selected-helper/selected-helper.component.scss
@@ -114,3 +114,10 @@
   max-width: 100%;
   width: 800px; // or adjust as needed
 }
+
+.selected-user-wrapper {
+  max-height: 100vh;
+  overflow-y: auto;
+  padding-right: 8px; // optional, for scrollbar space
+}
+
