--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,3 +23,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   height: 35px !important;
   font-size: 14px !important;
 }
+
+.mdc-list {
+  padding: 0 !important;
+}
