--- a/src/app/components/main-content/helpers/helpers.component.scss
+++ b/src/app/components/main-content/helpers/helpers.component.scss
@@ -78,21 +78,17 @@
   flex: 1;
   background-color: #f5f5f5;
   border-radius: 15px;
-  padding: 5px;
-  height: 80vh;
   display: flex;
-  align-items: center;
   justify-content: center;
   overflow: hidden;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 }
 
 .selectedHelper {
+  flex: 1;
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: auto;
-  height: auto;
-  padding: 0;
-  margin-top: 35px;
+  align-items: flex-start;
+  overflow-y: auto; /* <--- add this */
+  height: calc(100vh - 135px);
 }
