--- a/src/app/components/main-content/selected-helper/selected-helper.component.scss
+++ b/src/app/components/main-content/selected-helper/selected-helper.component.scss
@@ -107,17 +107,10 @@
   }
 }
 
-.selected-user-details {
-  transform: scale(0.92); // adjust between 0.8 - 0.9 based on fit
-  transform-origin: top center;
-  max-height: 100%;
-  max-width: 100%;
-  width: 800px; // or adjust as needed
-}
-
 .selected-user-wrapper {
-  max-height: 100vh;
-  overflow-y: auto;
-  padding-right: 8px; // optional, for scrollbar space
+  width: 750px;
 }
 
+.selected-user-details {
+  padding: 20px 0;
+}
