--- a/src/app/components/sidebar/search/search.component.scss
+++ b/src/app/components/sidebar/search/search.component.scss
@@ -2,6 +2,7 @@
   position: relative;
   width: 200px;
   margin-left: 8px;
+  margin-bottom: 5px;
   input {
     width: 100%;
     padding: 8px 12px 8px 36px; // padding-left gives space for icon
