changed the less than icon to maticon chevrolet back

--- a/src/app/components/add-helper/add-helper.component.html
+++ b/src/app/components/add-helper/add-helper.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="top-bar">
-    <span class="back-arrow" [routerLink]="['']">&lt;</span>
+    <mat-icon class="back-arrow" [routerLink]="['']">chevron_left</mat-icon>
     <span class="page-title">Add Helper</span>
   </div>
 
