--- a/src/app/components/add-helper/add-helper.component.scss
+++ b/src/app/components/add-helper/add-helper.component.scss
@@ -25,8 +25,9 @@
 
   .back-arrow {
     cursor: pointer;
-    font-weight: bold;
-    font-size: 24px;
+    font-size: 36px;
+    height: auto;
+    width: auto;
   }
 
   .page-title {
