--- a/src/app/components/add-helper/add-helper.component.scss
+++ b/src/app/components/add-helper/add-helper.component.scss
@@ -144,7 +144,8 @@ app-review {
 }
 
 .buttons {
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   display: flex;
   gap: 10px;
   padding-bottom: 10px;
@@ -162,4 +163,21 @@ app-review {
       cursor: not-allowed;
     }
   }
+}
+
+::ng-deep .mat-mdc-form-field-infix {
+  padding-top: 4px !important;
+  padding-bottom: 4px !important;
+  min-height: 40px !important;
+}
+
+::ng-deep .mat-mdc-select-trigger {
+  height: 35px !important;
+  display: flex !important;
+  align-items: center !important;
+}
+
+::ng-deep .mat-mdc-select-panel .mat-mdc-option {
+  height: 35px !important;
+  font-size: 14px !important;
 }
