changed the width of filter menu

--- a/src/app/components/main-content/main-content.component.scss
+++ b/src/app/components/main-content/main-content.component.scss
@@ -212,7 +212,7 @@
     }
 }
 
-::ng-deep .mat-mdc-menu-panel {
+::ng-deep .mat-mdc-menu-panel.filter-menu {
   max-width: 300px !important;
   width: 300px !important;
 }
