remove the upload route seperately and handling them in the add and update route

--- a/src/app/components/add-helper/sections/helper-details/helper-details.component.html
+++ b/src/app/components/add-helper/sections/helper-details/helper-details.component.html
@@ -169,6 +169,12 @@
     Phone number is required
   </mat-error>
 
+  <mat-error
+    *ngIf="form.get('phone')?.hasError('pattern') && form.get('phone')?.touched"
+  >
+    Phone number must be exactly 10 digits
+  </mat-error>
+
   <!-- Email -->
   <label for="email">Email</label>
   <input
